--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,6 +98,8 @@ async-std = [
 ]
 
 [dependencies]
+strum = "0.27.2"
+strum_macros = "0.27.2"
 apply = "0.3.0"
 ashpd = { version = "0.12.0", default-features = false, optional = true }
 async-fs = { version = "2.1", optional = true }
